--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "grand-eva-modas-api",
 	"version": "1.0.0",
 	"description": "",
+	"type": "module",
 	"main": "src/server.ts",
 	"scripts": {
 		"dev": "tsx watch --env-file=.env src/server.ts",
@@ -14,15 +15,23 @@
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
 		"@fastify/swagger": "^9.6.1",
+		"@prisma/client": "^6.19.1",
 		"@scalar/fastify-api-reference": "^1.40.1",
+		"bcrypt": "^6.0.0",
+		"date-fns": "^4.1.0",
+		"dotenv": "^17.2.3",
 		"fastify": "^5.6.2",
+		"fastify-plugin": "^5.1.0",
 		"fastify-type-provider-zod": "^6.1.0",
-		"zod": "^4.1.13"
+		"jose": "^6.1.3",
+		"zod": "^4.1.13",
+		"zod-prisma-types": "^3.3.10"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.8",
+		"@types/bcrypt": "^6.0.0",
 		"@types/node": "^24.10.1",
-		"prisma": "^7.1.0",
+		"prisma": "^6.19.1",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3"
 	}
