--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"packageManager": "pnpm@10.19.0",
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
+		"@fastify/multipart": "^9.3.0",
 		"@fastify/swagger": "^9.6.1",
 		"@prisma/client": "^6.19.1",
 		"@scalar/fastify-api-reference": "^1.40.1",
@@ -23,7 +24,9 @@
 		"fastify": "^5.6.2",
 		"fastify-plugin": "^5.1.0",
 		"fastify-type-provider-zod": "^6.1.0",
+		"firebase": "^12.7.0",
 		"jose": "^6.1.3",
+		"sharp": "^0.34.5",
 		"zod": "^4.1.13",
 		"zod-prisma-types": "^3.3.10"
 	},
