--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"packageManager": "pnpm@10.19.0",
 	"dependencies": {
 		"@fastify/cors": "^11.1.0",
+		"@fastify/jwt": "^10.0.0",
 		"@fastify/multipart": "^9.3.0",
 		"@fastify/swagger": "^9.6.1",
 		"@prisma/client": "^6.19.1",
